ext_ingress_lb/service_nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: nginx
  type: LoadBalancer
  loadBalancerIP: "35.232.91.88"
