ext_ingress_lb/ingress_nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /abc
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /discounted
        backend:
          serviceName: nginx
          servicePort: 80
